# django_template

./: .djlintrc  .dockerignore  .drone.yml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .woodpecker.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.traefik.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create-command.sh
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  pre-commit.yml
debian/: README.Debian  README.source  changelog  control  copyright  django-template.cron.d.ex  django-template.doc-base.ex  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  python-django-template-doc.docs  rules  watch.ex
debian/upstream/: metadata.ex
django/: .env.build  Dockerfile  Dockerfile.debian  Dockerfile.dev  docker-entrypoint.sh  local.py  manage.py  requirements.in  requirements.txt
django/docs/: 00_introduction.md  01_chapter_1.md  SUMMARY.md
django/functional_tests/: tests.py
django/myproject/: asgi.py  settings.py  urls.py  wsgi.py
django/scripts/: create_indexes.py  createsuperuser.py
myproject/: settings.py
nginx/: Dockerfile  default.conf  django.conf  docker-entrypoint-99-set-app-host.sh
umap/: asgi.py  requirements.txt  wsgi.py
umap/scripts/: createsuperuser.py
