[project]
name = "django-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Your Name", email = "your_email@example.com" }
]
dependencies = [
    "django>=5.0.6",
    "django-environ>=0.11.2",
    "djangorestframework>=3.15.1",
    "django-simple-history>=3.7.0",
    "psycopg2-binary>=2.9.9",
    "django-bootstrap5>=24.2",
    "gunicorn>=22.0.0",
    "django-extensions>=3.2.3",
    "ipython>=8.25.0",
    "setuptools>=70.0.0",
    "django-debug-toolbar>=4.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# TODO: Add your app(s) below
packages = ["django/myproject"]
